# pge-energy-mcp

./: .gitignore  CLAUDE.md  Procfile  README.md  pyproject.toml  requirements.txt  server.py
config/: cca_rates.json  pcia_vintages.json  pge_rates.json  rate_history.json
src/analysis/: compare.py  nem_compare.py  simulator.py  strategy.py  trueup.py  usage.py
src/data/: system_config.py
src/integrations/: espi_parser.py  pge_share_my_data.py  powerwall.py  solcast.py  tesla.py
src/optimization/: battery_optimizer.py  model_builder.py  schedule_formatter.py
src/parsers/: billing.py  green_button.py  tesla.py  tesla_power.py
src/rates/: engine.py  nem.py  tou.py
src/storage/: config_store.py
tests/: test_compare.py  test_config_store.py  test_integrations.py  test_nem_compare.py  test_optimizer.py  test_parsers.py  test_pge_api.py  test_rates.py  test_simulator.py  test_strategy.py  test_trueup.py  test_web.py
web/: app.py  session.py
web/routes/: compare.py  profile.py  trueup.py  upload.py
web/static/: style.css
web/templates/: base.html  compare.html  index.html  profile.html  trueup.html
web/templates/partials/: compare_results.html  profile_results.html  trueup_results.html  upload_summary.html
