[project]
name = "pge-energy-mcp"
version = "0.1.0"
description = "MCP server for PG&E solar + battery energy analysis"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Proprious Labs"}]

dependencies = [
    "fastmcp>=2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "uvicorn>=0.30.0",
    "pyomo>=6.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
phase2 = [
    "pypowerwall>=0.10.0",
    "solcast>=1.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
